--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <section class="page-header">
-      <a href="https://jlvivero.github.io"  style="left" class="btn">Home</a>
+      <a href="https://jlvivero.github.io"  style="float: left; height: 0" class="btn">Home</a>
       <h1 class="project-name">Tutorfox</h1>
       <h2 class="project-tagline">TutorFox sniffs out the best tutors in the CETYS community and fetches their attention for one on one tutoring sessions in a personalized schedule</h2>
       <a href="https://github.com/jlvivero/TutorFox" class="btn">View on GitHub</a>
