--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
   <body>
+    <section class="page-nav">
+      <a href="https://jlvivero.github.io" style="float: left;" class="btn">Home</a>
+      <a href="https://jlvivero.github.io/about" style="float: right;" class="btn">About</a>
+      <a href="https://jlvivero.github.io/projects" style="float: right;" class="btn">Projects</a>
+    </section>
     <section class="page-header">
-      <a href="https://jlvivero.github.io"  style="float: left;" class="btn">Home</a>
       <h1 class="project-name">Tutorfox</h1>
       <h2 class="project-tagline">TutorFox sniffs out the best tutors in the CETYS community and fetches their attention for one on one tutoring sessions in a personalized schedule</h2>
       <a href="https://github.com/jlvivero/TutorFox" class="btn">View on GitHub</a>
