--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="https://jlvivero.github.io" style="float: left;" class="btn">Home</a>
         <a href="https://jlvivero.github.io/about" style="float: right;" class="btn">About</a>
         <a href="https://jlvivero.github.io/projects" style="float: right;" class="btn">Projects</a>
-         <h1 class="project-name">Tutorfox</h1>
+         <h1 class="project-name" style="float: center;">Tutorfox</h1>
       </section>
       <section class="page-header">
         <h2 class="project-tagline">TutorFox sniffs out the best tutors in the CETYS community and fetches their attention for one on one tutoring sessions in a personalized schedule</h2>
