--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <section class="page-nav">
         <a href="https://jlvivero.github.io" style="float: left;" class="btn">Home</a>
         <a href="https://jlvivero.github.io/about" style="float: right;" class="btn">About</a>
-        <a href="https://jlvivero.github.io/projects" style="float: right;" class="btn">Projects</a
+        <a href="https://jlvivero.github.io/projects" style="float: right;" class="btn">Projects</a>
         <h1 class="project-name">Tutorfox</h1>
       </section>
       <section class="page-header">
