--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="page-gen">
       <section class="page-nav">
         <a href="https://jlvivero.github.io" style="float: left;" class="btn">Home</a>
+        <div style= "float:left;"></div>
         <a href="https://jlvivero.github.io/about" style="float: right;" class="btn">About</a>
         <a href="https://jlvivero.github.io/projects" style="float: right;" class="btn">Projects</a>
         <h1 class="project-name">Tutorfox</h1>
