--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
         <a href="https://jlvivero.github.io/about" style="float: right;" class="btn">About</a>
         <a href="https://jlvivero.github.io/projects" style="float: right;" class="btn">Projects</a>
       </section>
-      <section class="page-header">
+      <section class="page-title">
         <h1 class="project-name">Tutorfox</h1>
+      </section>
+      <section class="page-header">
         <h2 class="project-tagline">TutorFox sniffs out the best tutors in the CETYS community and fetches their attention for one on one tutoring sessions in a personalized schedule</h2>
         <a href="https://github.com/jlvivero/TutorFox" class="btn">View on GitHub</a>
         <a href="https://github.com/jlvivero/TutorFox/zipball/master" class="btn">Download .zip</a>
