--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="https://jlvivero.github.io/projects" style="float: right;" class="btn">Projects</a>
       </section>
       <section class="page-title">
-        <h1 class="project-name">Tutorfox</h1>
+        <h1 class="project-name"  style="text-align:center">Tutorfox</h1>
       </section>
       <section class="page-header">
         <h2 class="project-tagline">TutorFox sniffs out the best tutors in the CETYS community and fetches their attention for one on one tutoring sessions in a personalized schedule</h2>
